WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120956
Regression: media controls and status messages are no longer localized
https://bugs.webkit.org/show_bug.cgi?id=120956
Summary
Regression: media controls and status messages are no longer localized
Jer Noble
Reported
2013-09-07 09:54:06 PDT
[Mac] Localize the JavaScript controls
Attachments
Patch
(16.37 KB, patch)
2014-04-11 12:27 PDT
,
Brent Fulgham
jer.noble
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Craig
Comment 1
2013-10-31 13:28:10 PDT
related to
bug 121990
Radar WebKit Bug Importer
Comment 2
2013-10-31 13:30:42 PDT
<
rdar://problem/15365231
>
James Craig
Comment 3
2013-11-04 18:54:41 PST
Blocking against
bug 123749
because I've got more strings coming in that one.
Brent Fulgham
Comment 4
2014-04-11 12:27:17 PDT
Created
attachment 229151
[details]
Patch
Jer Noble
Comment 5
2014-04-11 13:38:50 PDT
Comment on
attachment 229151
[details]
Patch Nice! r=me.
Jon Lee
Comment 6
2014-04-11 13:42:32 PDT
Comment on
attachment 229151
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229151&action=review
> Source/WebCore/English.lproj/mediaControlsLocalizedStringsiOS.js:4 > + '##AIRPLAY_DEVICE_NAME##': 'This video is playing on "##DEVICE_NAME##".',
These should be the nicer quotes!
Brent Fulgham
Comment 7
2014-04-11 13:42:43 PDT
Committed
r167145
: <
http://trac.webkit.org/changeset/167145
>
Brent Fulgham
Comment 8
2014-04-11 13:48:10 PDT
(In reply to
comment #6
)
> (From update of
attachment 229151
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=229151&action=review
> > > Source/WebCore/English.lproj/mediaControlsLocalizedStringsiOS.js:4 > > + '##AIRPLAY_DEVICE_NAME##': 'This video is playing on "##DEVICE_NAME##".', > > These should be the nicer quotes!
I don't understand what you mean here. Is there a UNICODE character for start/end quote we should be using?
Jon Lee
Comment 9
2014-04-11 13:55:21 PDT
(In reply to
comment #8
)
> (In reply to
comment #6
) > > (From update of
attachment 229151
[details]
[details]) > > View in context:
https://bugs.webkit.org/attachment.cgi?id=229151&action=review
> > > > > Source/WebCore/English.lproj/mediaControlsLocalizedStringsiOS.js:4 > > > + '##AIRPLAY_DEVICE_NAME##': 'This video is playing on "##DEVICE_NAME##".', > > > > These should be the nicer quotes! > > I don't understand what you mean here. Is there a UNICODE character for start/end quote we should be using?
“##DEVICE_NAME##” rather than "##DEVICE_NAME##"
Brent Fulgham
Comment 10
2014-04-11 14:04:18 PDT
Curl quotes landed in follow-up:
r167147
<
http://trac.webkit.org/changeset/167147
>
Xabier Rodríguez Calvar
Comment 11
2014-04-11 15:41:46 PDT
Comment on
attachment 229151
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229151&action=review
> Source/WebCore/rendering/RenderThemeMac.mm:245 > - if (m_mediaControlsScript.isEmpty()) > - m_mediaControlsScript = [NSString stringWithContentsOfFile:[[NSBundle bundleForClass:[WebCoreRenderThemeBundle class]] pathForResource:@"mediaControlsApple" ofType:@"js"] encoding:NSUTF8StringEncoding error:nil]; > + if (m_mediaControlsScript.isEmpty()) { > + StringBuilder scriptBuilder; > + scriptBuilder.append([NSString stringWithContentsOfFile:[[NSBundle bundleForClass:[WebCoreRenderThemeBundle class]] pathForResource:@"mediaControlsLocalizedStrings" ofType:@"js"] encoding:NSUTF8StringEncoding error:nil]); > + scriptBuilder.append([NSString stringWithContentsOfFile:[[NSBundle bundleForClass:[WebCoreRenderThemeBundle class]] pathForResource:@"mediaControlsApple" ofType:@"js"] encoding:NSUTF8StringEncoding error:nil]); > + m_mediaControlsScript = scriptBuilder.toString(); > + }
If I am not mistaken, moving the localized strings to a different file will break both GTK and EFL (EFL just moved to JS controls and actually they use the Apple ones until they redesign them). I think you need to add the localized string file also for GTK and EFL in order not to break those ports.
Xabier Rodríguez Calvar
Comment 12
2014-04-11 15:52:26 PDT
(In reply to
comment #11
)
> (From update of
attachment 229151
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=229151&action=review
> > > Source/WebCore/rendering/RenderThemeMac.mm:245 > > - if (m_mediaControlsScript.isEmpty()) > > - m_mediaControlsScript = [NSString stringWithContentsOfFile:[[NSBundle bundleForClass:[WebCoreRenderThemeBundle class]] pathForResource:@"mediaControlsApple" ofType:@"js"] encoding:NSUTF8StringEncoding error:nil]; > > + if (m_mediaControlsScript.isEmpty()) { > > + StringBuilder scriptBuilder; > > + scriptBuilder.append([NSString stringWithContentsOfFile:[[NSBundle bundleForClass:[WebCoreRenderThemeBundle class]] pathForResource:@"mediaControlsLocalizedStrings" ofType:@"js"] encoding:NSUTF8StringEncoding error:nil]); > > + scriptBuilder.append([NSString stringWithContentsOfFile:[[NSBundle bundleForClass:[WebCoreRenderThemeBundle class]] pathForResource:@"mediaControlsApple" ofType:@"js"] encoding:NSUTF8StringEncoding error:nil]); > > + m_mediaControlsScript = scriptBuilder.toString(); > > + } > > If I am not mistaken, moving the localized strings to a different file will break both GTK and EFL (EFL just moved to JS controls and actually they use the Apple ones until they redesign them). I think you need to add the localized string file also for GTK and EFL in order not to break those ports.
And actually, it did.
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r167157%20%2846401%29/accessibility/media-element-pretty-diff.html
Brent Fulgham
Comment 13
2014-04-11 19:14:38 PDT
(In reply to
comment #12
)
> (In reply to
comment #11
)
> > > > If I am not mistaken, moving the localized strings to a different file will break both GTK and EFL (EFL just moved to JS controls and actually they use the Apple ones until they redesign them). I think you need to add the localized string file also for GTK and EFL in order not to break those ports. > > And actually, it did. > >
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r167157%20%2846401%29/accessibility/media-element-pretty-diff.html
Martin Robinson and I already saw this, and he has an approved patch waiting to land as soon as EWS showed successful runs.
Xabier Rodríguez Calvar
Comment 14
2014-04-12 00:20:28 PDT
(In reply to
comment #13
)
> (In reply to
comment #12
) > > (In reply to
comment #11
) > > > > > > > If I am not mistaken, moving the localized strings to a different file will break both GTK and EFL (EFL just moved to JS controls and actually they use the Apple ones until they redesign them). I think you need to add the localized string file also for GTK and EFL in order not to break those ports. > > > > And actually, it did. > > > >
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r167157%20%2846401%29/accessibility/media-element-pretty-diff.html
> > Martin Robinson and I already saw this, and he has an approved patch waiting to land as soon as EWS showed successful runs.
EFL could be broken too, see
bug 120956
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug