Source/WebCore/English.lproj/mediaControlsLocalizedStrings.js
@@ -1,0 +1,29 @@
+function mediaControlsLocalizedStrings() {
+    return {
+        'Aborted': 'Aborted',
+        'Audio Playback': 'Audio Playback',
+        'Captions': 'Captions',
+        'Display Full Screen': 'Display Full Screen',
+        'Duration': 'Duration',
+        'Elapsed': 'Elapsed',
+        'Error': 'Error',
+        'Exit Full Screen': 'Exit Full Screen',
+        'Fast Forward': 'Fast Forward',
+        'Loading': 'Loading',
+        'Maximum Volume': 'Maximum Volume',
+        'Minimum Volume': 'Minimum Volume',
+        'Mute': 'Mute',
+        'Pause': 'Pause',
+        'Play': 'Play',
+        'Remaining': 'Remaining',
+        'Rewind': 'Rewind',
+        'Rewind %%sec%% Seconds': 'Rewind %%sec%% Seconds',
+        'Stalled': 'Stalled',
+        'Subtitles': 'Subtitles',
+        'Suspended': 'Suspended',
+        'Unmute': 'Unmute',
+        'Video Playback': 'Video Playback',
+        'Volume': 'Volume',
+        'Waiting': 'Waiting'
+    }
+};
