Source/WebCore/English.lproj/mediaControlsLocalizedStringsiOS.js
@@ -1,0 +1,9 @@
+function mediaControlsLocalizedStringsiOS() {
+    return {
+        '##AIRPLAY_DEVICE_TYPE##': 'AirPlay',
+        '##AIRPLAY_DEVICE_NAME##': 'This video is playing on "##DEVICE_NAME##".',
+
+        '##TVOUT_DEVICE_TYPE##': 'TV Connected',
+        '##TVOUT_DEVICE_NAME##': 'This video is playing on the TV.',
+    }
+};
