Source/WebCore/Modules/mediacontrols/mediaControlsApple.js
@@ -108,38 +108,14 @@ Controller.prototype = {
 
     // Localized string accessor
     UIString: function(s){
+        if (!this.localizedStrings)
+            this.localizedStrings = mediaControlsLocalizedStrings();
+
         if (this.localizedStrings[s])
             return this.localizedStrings[s];
-        else
-            return s; // FIXME: log something if string not localized.
-    },
-    localizedStrings: {
-        // FIXME: Move localization to ext strings file <http://webkit.org/b/120956>
-        'Aborted': 'Aborted',
-        'Audio Playback': 'Audio Playback',
-        'Captions': 'Captions',
-        'Display Full Screen': 'Display Full Screen',
-        'Duration': 'Duration',
-        'Elapsed': 'Elapsed',
-        'Error': 'Error',
-        'Exit Full Screen': 'Exit Full Screen',
-        'Fast Forward': 'Fast Forward',
-        'Loading': 'Loading',
-        'Maximum Volume': 'Maximum Volume',
-        'Minimum Volume': 'Minimum Volume',
-        'Mute': 'Mute',
-        'Pause': 'Pause',
-        'Play': 'Play',
-        'Remaining': 'Remaining',
-        'Rewind': 'Rewind',
-        'Rewind %%sec%% Seconds': 'Rewind %%sec%% Seconds',
-        'Stalled': 'Stalled',
-        'Subtitles': 'Subtitles',
-        'Suspended': 'Suspended',
-        'Unmute': 'Unmute',
-        'Video Playback': 'Video Playback',
-        'Volume': 'Volume',
-        'Waiting': 'Waiting'
+
+        console.error("Localized string \"" + s + "\" not found.");
+        return "LOCALIZED STRING NOT FOUND";
     },
 
     listenFor: function(element, eventName, handler, useCapture)
